Change replication action url from unify name to actual action name
